# highlight-extractor

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  requirement.txt  requirements.txt  subtitle_adder.py  test.ipynb
app/: crud.py  main.py  models.py  util.py  utils.py
app/core/: downloadVideo.py  highlightExtractor.py  processHighlight.py  processSubtitle.py  sendMail.py  status_manager.py  subtitleAdder.py  thumbnailExtractor.py  videoResize.py
app/tests/: test_youtube_url.py
