[tool.poetry]
name = "subtitle-adder"
version = "0.1.0"
description = ""
authors = ["Giheon Do <dgh0001@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faster-whisper = "^1.0.3"
ffmpeg-python = "^0.2.0"
pytubefix = "^7.4.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
